# hidapi-d

./: LICENSE  LICENSE.md  README.md  dub.json  example.d  meson.build
source/: meson.build
source/hidapi/: bindings.d  device.d  devicelist.d  error.d  hid.d
tests/: example.d  meson.build
